--- a/frontend-user/src/index.css
+++ b/frontend-user/src/index.css
@@ -54,6 +54,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.posts-container {
+  width: 1000px;
+  height: 1000px;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
