added button styling on nav links.Create basic posts styling.

--- a/frontend-user/src/styles/NavBar.css
+++ b/frontend-user/src/styles/NavBar.css
@@ -19,3 +19,9 @@
   align-items: center;
   width: 100%;
 }
+
+.nav-container ul li {
+  border: 1px solid black;
+  padding: 0.5rem;
+  border-radius: 5px;
+}
