--- a/frontend-user/src/styles/PostContent.css
+++ b/frontend-user/src/styles/PostContent.css
@@ -12,23 +12,24 @@
   justify-content: center;
   margin-top: 1rem;
   width: 100%;
+  height: 100vh;
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08); */
+}
+
+.comments-container h2 {
+  margin-top: 1rem;
 }
 
 .comment-card {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-
   padding: 1rem;
   width: 25%;
-  border: 1px solid black;
-}
-
-.comment-card {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
   background: white;
-  padding: 1.5rem;
+  /* padding: 1.5rem; */
   border-radius: 12px;
-  margin-bottom: 1.5rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 
@@ -54,4 +55,8 @@
 
 .comment-actions button:hover {
   background: #e0e0e0;
+}
+
+.comments-form {
+  margin: 1rem;
 }
