--- a/frontend-user/src/styles/PostContent.css
+++ b/frontend-user/src/styles/PostContent.css
@@ -4,15 +4,32 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
+}
+
+.post-container {
+  max-width: 800px;
+}
+
+.author {
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid black;
+  width: 50%;
+  text-align: center;
+}
+.postContent {
+  text-align: center;
+  white-space: normal;
+  padding: 1rem;
 }
 
 .comments-container {
   display: flex;
   justify-content: center;
-  justify-content: center;
   margin-top: 1rem;
   width: 100%;
-  height: 100vh;
+  padding-bottom: 2rem;
 }
 
 .comments-container h2 {
@@ -29,6 +46,7 @@
   background: white;
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  min-width: 300px;
 }
 
 .edit-btns {
@@ -62,6 +80,9 @@
 
 .comments-form {
   margin: 1rem;
+  /* display: flex;
+  justify-content: space-between;
+  align-items: center; */
 }
 
 .comment-btns1 {
