--- a/frontend-user/src/styles/PostContent.css
+++ b/frontend-user/src/styles/PostContent.css
@@ -19,6 +19,7 @@
   text-align: center;
 }
 .postContent {
+  overflow-wrap: break-word;
   text-wrap: wrap;
   text-align: center;
   white-space: normal;
@@ -105,6 +106,10 @@
 
 .comment-btns1 img {
   width: 30px;
+}
+
+.comment-content {
+  text-align: center;
 }
 
 @media (max-width: 768px) {
